2018-01-31    <cerebrum@cleomedes.uit.no>

	* rename_account.py (Changer.update_email): The function parsing existing email address wasnt working propperly.
	rewrote it with try/except

2018-01-23    <cerebrum@cleomedes.uit.no>

	* rename_account.py (main): Added new flag. This flag decides if an email will be sent to the user (or  not)

2017-12-22  Karen   <cerebrum@cleomedes.uit.no>

    * add_cim_spread.py: Added to repo. Script for adding cim_spread for a list of persons.

2017-12-18    <cerebrum@cleomedes.uit.no>

	* rename_account.py (main): Removed 2 email recipients when changing username. star-gru@orakel.uit.no and nybruker2@asp.uit.no are no longer in use

2017-10-03    <cerebrum@cleomedes.uit.no>

	* rename_account.py (main): removed sendmail code. cleomedes is not so send out email until after leetag is removed

2017-09-21  Karen   <cerebrum@cleomedes.uit.no>

    * delete_cim_spread.py: Added to repo. Script for deleting cim_spread for a list of persons.

2017-08-29    <cerebrum@cleomedes.uit.no>

	* delete_account.py (delete.delete_account): Need to delete account_id from mailq table as well

2017-08-18    <cerebrum@cleomedes.uit.no-cleomedes>

	* delete_account.py: Updated script to be more robust

2017-06-28    <cerebrum@cleomedes.uit.no-cleomedes>

	* join_persons.py: new cerebrum version has discontinued the
	logger import. logger objects are now created with the factory
	method

2017-03-20    <cerebrum@cleomedes.uit.no-cleomedes>

	* groupadd.py: removed old comments

2017-02-14    <cerebrum@cleomedes.uit.no-cleomedes>

	* rename_account.py (main): removed all sendmail functions. we do
	not want to sendmail from this script. it will be sent from the
	corresponding script on leetah.

2017-02-10  Karen   <cerebrum@cleomedes.uit.no>
    
    * delete_account.py (delete_account): Added delete of bofhd session things and delete from entity_contact_info.

    * set_email.py (set_mail): Added hin.no and hih.no as invalid domains.
